--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="img/png" href="img/logo2.png">
     <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
  
     <title>Olowu Oluwseun</title>
 </head>
 <body>
-    <h1>Olowu Oluwaseun</h1>     
-    <nav>
-        <a href="#">One</a>
-        <a href="#">Two</a>
-        <a href="#">Three</a>
-    </nav>
-    <div>
+    <header>
+        <h1>Olowu Oluwaseun</h1>     
+        <nav>
+            <a href="#">One</a>
+            <a href="#">Two</a>
+            <a href="#">Three</a>
+            <a href="#"> Your Choice </a>
+        </nav>
+    </header>
+ 
+    <div class="half">
         <h3>Favourite Food</h3>
         <ul>
             <li>Pounded Yam</li>
@@ -24,15 +29,15 @@
             <li>Yam</li>
         </ul>
     </div>
-    <div>
-        <h3>Archievement</h3>
+    <div class="half">
+        <h3>Achievement</h3>
        <p>Progress in This course <progress max="100" min="0" value="100"> </progress></p>
        <p>Progress in specialization <progress max="100" min="0" value="20"> </progress></p> 
        <p>Progress in Life  <progress max="100" min="0" value="30"> </progress></p> 
         
     </div>
-    <div>
-        <h3>More About me</h3>
+    <div class="whole">
+        <h3 id="h3-left">More About me</h3>
         <details>I was born in Ilorin Kwara State Nigeria.
             <summary>My Childhood</summary> 
         </details>
